MR2-913 - Adjust Browse section layout to avoid always-visible scrollbars r=mr2-core-ui-reviewers,prathiksha
Differential Revision: https://phabricator.services.mozilla.com/D130702

--- a/browser/components/companion/content/companion.css
+++ b/browser/components/companion/content/companion.css
@@ -431,7 +431,7 @@ e-global-nav-debugging h2 {
 .browse {
   display: flex;
   flex-direction: column;
-  margin: 16px;
+  padding: 16px 16px 0;
 }
 
 .browse button {
